force-app/main/default/objects/ssot__EmailContent__dlm/fields/ssot__APIVersionName__c.field-meta.xml
<CustomField>
    <fullName>ssot__APIVersionName__c</fullName>
    <label>API Version</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>APIVersionName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>