force-app/main/default/objects/ssot__EmailContent__dlm/fields/ssot__DeliveryPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryPercent__c</fullName>
    <label>Delivery Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>