force-app/main/default/objects/ssot__EmailContent__dlm/fields/ssot__TotalHardBouncedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalHardBouncedQuantity__c</fullName>
    <label>Total Hard Bounced Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalHardBouncedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>