force-app/main/default/objects/ssot__EmailContent__dlm/fields/ssot__TotalOpensQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalOpensQuantity__c</fullName>
    <label>Total Opens Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalOpensQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>