force-app/main/default/objects/ssot__EmailContent__dlm/fields/ssot__TotalSoftBouncedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalSoftBouncedQuantity__c</fullName>
    <label>Total Soft Bounced Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalSoftBouncedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>