force-app/main/default/objects/ssot__EmailContent__dlm/fields/ssot__UITypeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__UITypeText__c</fullName>
    <label>User Interface Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UITypeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>